[package]
name = "terminal-art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
term_size = "0.3.2"
clap = {version = "3.2.17", features = ["cargo"]}
font_rastering = {path = "font_rastering"}
